# sparrowpy

./: .gitignore  .readthedocs.yml  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.rst  HISTORY.rst  LICENSE  README.md  README.rst  environment.yml  pyproject.toml  pytest.ini  requirements_dev.txt  setup.cfg  setup.py  test.sofa
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: doc.yml  pytest_merged.yml  pytest_pr.yml  release.yml  ruff.yml  test_examples.yml  tests.yml
Bsc_Filip/: inf_plane_histogram.py
docs/: Makefile  api_reference.rst  conf.py  examples.rst  index.rst  make.bat  modules.rst  sparapy.rst  sparrowpy.rst
docs/classes/: sparrowpy.RadiosityFast.rst  sparrowpy.RadiosityKang.rst
docs/examples/: fast_radiosity.nblink  geometry_loading_from_file.nblink  kang_radiosity.nblink
docs/modules/: sparapy.brdf.rst  sparapy.geometry.rst  sparapy.plot.rst  sparapy.radiosity.rst  sparapy.sound_object.rst  sparrowpy.brdf.rst  sparrowpy.dsp.rst  sparrowpy.geometry.rst  sparrowpy.plot.rst  sparrowpy.radiosity.rst  sparrowpy.sound_object.rst
examples/: Acta.ipynb  Acta_plots.ipynb  Angular_radiosity.ipynb  IHTApark.py  IHTApark_acoustic_geo_cloth.stl  IN_paper_steps.ipynb  SPat_etc.ipynb  TMPold.ipynb  brdf_17.sofa  brdf_19.sofa  brdf_s0.5_10.sofa  brdf_s0.5_2.sofa  brdf_s0.5_30.sofa  brdf_s0.5_5.sofa  brdf_s0_10.sofa  brdf_s0_2.sofa  brdf_s0_30.sofa  brdf_s0_5.sofa  brdf_s1_10.sofa  brdf_s1_2.sofa  brdf_s1_30.sofa  brdf_s1_5.sofa  compare_recursive_queue.ipynb  compare_speed.ipynb  compare_speed_algorithm_old_vs_new.ipynb  compare_speed_create_patches.ipynb  compare_speed_form_factor.ipynb  compare_speed_init_energy.ipynb  comparison.py  create_brdfs.ipynb  estimate_etcs.py  f_ir_room_fast.py  f_validate_diffuse_plane.ipynb  f_validate_diffuse_plane_+.ipynb  f_validate_diffuse_plane_+_fast.ipynb  f_validate_diffuse_plane_advanced_fast.ipynb  f_validate_test_fast_plane_results.py  f_validated_dsp.py  fast_radiosity.ipynb  fastrad_vs_imsource.ipynb  (+63 more)
examples/Works/: RenderingEq_phong_acoustics.py  Stresstest_speed.py  ToDebug.py  Works.ipynb  [TMP]develope.ipynb
examples/models/: shoebox_3.stl
examples/resources/: brdf_ground.sofa  brdf_new.sofa  brdf_rand.sofa  clean_ihtapark.blend  clean_ihtapark_wow_factor.blend  cube_diff_materials.blend  cube_simple.blend  cube_simple.stl  cube_square_patches.blend  cube_triangle_patches.blend  cube_uneven_patches.blend  cube_uneven_sides.blend  ihtapark_scene.json  inf_plane_data_.csv  reduced_ihtapark.blend  reduced_ihtapark2.blend  seminar.blend  seminar_scene.json
examples/sim_data/: f_hist_room_4_5_3_1.2.csv  f_hist_room_4_5_3_2.csv
form-factor/: check_ff.py  check_sampling.py  elmt.py  exact_solutions.py  form_factor.py  geom.py  geometry.py  hemicube.py  nusselt.py  sampling.py
form-factor/ff_helpers/: integrate_line.py  sampling.py
icon_dev/: generate_doc_logos.py  update_icon_version_number.py  update_logo_version.py
raven_sim/: diffuse_room.ac  diffuse_room.m  diffuse_room.rpf  run_simu.m  scene9.ac  scene9.rpf  seminar.m
sparapy/: __init__.py  brdf.py  energy_exchange.far  ffhelpers.py  form_factor.py  geometry.py  image_source.py  io.py  is_obj.py  plot.py  radiosity.py  radiosity_fast.py  read_geometry.py  sound_object.py
sparrowpy/: __init__.py  brdf.py  dsp.py  form_factor.py  geometry.py  image_source.py  is_obj.py  plot.py  radiosity.py  sound_object.py
supp_materials/: App_BRDF_generation.ipynb  BRDF_generation.ipynb  PLOTS_street_canyon.ipynb  README.md  VIA_triangular_facade.ipynb  VIB1_street_canyon_decay.ipynb  VIB2_street_canyon_performance.ipynb  VIB_street_canyon_plots.ipynb  V_infinite_diffuse_plane.ipynb  infinite_diffuse_plane.ipynb  requirements.txt  street_canyon_decay.ipynb  street_canyon_performance.ipynb  triangular_facade.ipynb
tests/: __init__.py  conftest.py  example_plot_energy_patches_time.py  nindi_manual_tests.py  test_DRadiosityFast.py  test_DRadiosityFast_infinite_diffuse_plane.py  test_DRadiosityFast_infinite_plane.py  test_DRadiosityFast_infinite_specular_plane.py  test_DRadiosityFast_order.py  test_DRadiosityFast_sphere.py  test_DirectionalRadiosityFast.py  test_DirectionalRadiosityFast_analytic_diffuse_plane.py  test_DirectionalRadiosityFast_analytic_diffuse_room.py  test_Radiosity.py  test_RadiosityDirectional.py  test_SceneGeometry.py  test_blender_import.py  test_brdf.py  test_brdf_from_directional_s.py  test_brdf_from_scattering.py  test_conftest.py  test_dsp.py  test_dsp_etc_to_ir.py  test_dsp_filtering.py  test_energy_matrix_patches.py  test_energy_patches.py  test_ff_brdf.py  test_ff_brdf_source2patch2receiver.py  test_first_cast.py  test_formfactor.py  test_image_source.py  test_imagesource.py  test_intp.py  test_io.py  test_mesh_operations.py  test_multisource.py  test_nindi.py  test_nindisplots.py  test_plots.py  test_radiosity_cmp.py  (+10 more)
testss/: conftest.py  test_intp.py
(+186 files in other folders)
