[project]
name = "sparrowpy"
version = "1.0.1"
description = "Sound Propagation with Acoustic Radiosity for Realistic Outdoor Worlds."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "The sparrowpy developers" },
]
keywords = [
    "acoustics",
    "radiosity",
    "sound propagation",
    "auralization",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    'numpy<2',
    'scipy',
    'matplotlib',
    'pyfar',
    'sofar',
]

[project.optional-dependencies]
blender = ['bpy',]
fast = ['numba',]
deploy = [
    "twine",
    "wheel",
    "build",
    "setuptools",
    "bump-my-version",
    "sparrowpy[fast]",
    "sparrowpy[blender]",
]
tests = [
    "pytest",
    "pytest-cov",
    "watchdog",
    "ruff==0.9.*",
    "coverage",
    "watermark",
    "ipykernel",
    "sparrowpy[fast]",
    "nbmake",
]
docs = [
    "sphinx",
    "autodocsumm>=0.2.14",
    "pydata-sphinx-theme",
    "sphinx_mdinclude",
    "sphinx-design",
    "sphinx-favicon",
    "nbsphinx",
    "sphinx_gallery",
    "nbsphinx_link",
    "ipython",
]
dev = ["sparrowpy[deploy,tests,docs,blender]"]

[project.urls]
Tracker = "https://github.com/sparrow-acoustics/sparrowpy/issues"
Documentation = "https://sparrowpy.readthedocs.io/"
Download = "https://pypi.org/project/sparrowpy/"
Homepage = "https://pyfar.org/"
Source = "https://github.com/sparrow-acoustics/sparrowpy"
Changelog = "https://github.com/sparrow-acoustics/sparrowpy/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters


[tool.ruff]
exclude = [
    ".git",
    "docs",
]
line-length = 79
lint.ignore = [
    "D200",   # One-line docstring should fit on one line with quotes
    "D202",   # No blank lines allowed after function docstring
    "D205",   # 1 blank line required between summary line and description
    "D401",   # First line should be in imperative mood
    "D404",   # First word of the docstring should not be "This"
    "B006",   # Do not use mutable data structures for argument defaults
    "B008",   # Do not perform calls in argument defaults
    "PT018",  # Assertion should be broken down into multiple parts
    "PT019",  # Fixture `_` without value is injected as parameter
    "NPY002", # random generator
]
lint.select = [
    "B",      # bugbear extension
    "ARG",    # Remove unused function/method arguments
    "C4",     # Check for common security issues
    "E",      # PEP8 errors
    "F",      # Pyflakes
    "W",      # PEP8 warnings
    "D",      # Docstring guidelines
    "NPY",    # Check all numpy related deprecations
    "D417",   # Missing argument descriptions in the docstring
    "PT",     # Pytest style
    "A",      # Avoid builtin function and type shadowing
    "ERA",    # No commented out code
    "NPY",    # Check all numpy related deprecations
    "COM",    # trailing comma rules
    "I002",   # missing required import
    "TID252", # Use absolute over relative imports
    "FIX",    # Code should not contain FIXME, TODO, etc
]

# Ignore missing docstrings in tests
[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D100",
    "D101",
    "D103",
    "D104",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"


[tool.bumpversion]
current_version = "1.0.1"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = true
ignore_missing_version = false
ignore_missing_files = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = '\nversion = "{current_version}"'
replace = '\nversion = "{new_version}"'

[[tool.bumpversion.files]]
filename = "sparrowpy/__init__.py"
search = "__version__ = '{current_version}'"
replace = "__version__ = '{new_version}'"

[[tool.bumpversion.files]]
filename = "docs/_static/logo.svg"
search = ">{current_version}</tspan>"
replace = ">{new_version}</tspan>"

[[tool.bumpversion.files]]
filename = ".zenodo.json"
search = '"version": "{current_version}",'
replace = '"version": "{new_version}",'
